--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.iii.sierra.api.bdd.jbehave.demo</groupId>
-    <artifactId>bdddemo</artifactId>
+    <groupId>com.iii.sierra.api.bdd</groupId>
+    <artifactId>apibdd</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -14,8 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <thucydides.version>0.9.269</thucydides.version>
         <thucydides.jbehave.version>0.9.268</thucydides.jbehave.version>
-        <project.junit.stories.package>com.iii.sierra.api.bdd.jbehave.demo.tests.stepDefinitions
-        </project.junit.stories.package>
+        <project.junit.stories.package>com.iii.sierra.api.bdd.stepDefinitions</project.junit.stories.package>
+        <project.site.url>dev-api.iii.com</project.site.url>
     </properties>
 
     <dependencies>
@@ -77,6 +77,12 @@
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
         </dependency>
+        <!-- SS additions for db access -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>commons-codec</groupId>-->
         <!--<artifactId>commons-codec</artifactId>-->
@@ -98,7 +104,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
-                    <skip>true</skip>
+                    <!--<skip>true</skip>-->
+                    <systemPropertyVariables>
+                        <environment>${env.USER}</environment>
+                    </systemPropertyVariables>
+
                 </configuration>
             </plugin>
             <plugin>
